--- a/build.gradle
+++ b/build.gradle
@@ -10,7 +10,7 @@ apply plugin: 'android-library'
 
 repositories {
     maven {
-        url 'https://github.com/Goddchen/mvn-repo/raw/master/'
+        url '/Users/br/repos/mvn-repo/'
     }
     maven { url 'http://repo1.maven.org/maven2' }
 }
