--- a/build.gradle
+++ b/build.gradle
@@ -4,27 +4,24 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.3.1'
+        classpath 'com.android.tools.build:gradle:3.0.1'
     }
 }
 apply plugin: 'com.android.library'
 
 repositories {
-    maven {
-        url '/Users/br/repos/ext/mvn-repo/'
-    }
     maven { url 'http://repo1.maven.org/maven2' }
+    google()
 }
 
 dependencies {
     compile(
-            'com.android.support:appcompat-v7:21.0.+',
+        'com.android.support:appcompat-v7:27.0.2',
     )
 }
 
 android {
-    compileSdkVersion 25
-    buildToolsVersion '25.0.0'
+    compileSdkVersion 26
 
     defaultConfig {
         minSdkVersion 14
