--- a/build.gradle
+++ b/build.gradle
@@ -1,22 +1,22 @@
 buildscript {
     repositories {
-        mavenCentral()
         jcenter()
         google()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.0.1'
+        classpath 'com.android.tools.build:gradle:3.1.0'
     }
 }
 apply plugin: 'com.android.library'
 
 repositories {
     maven { url 'http://repo1.maven.org/maven2' }
+    jcenter()
     google()
 }
 
 dependencies {
-    compile(
+    implementation(
         'com.android.support:appcompat-v7:27.0.2',
     )
 }
@@ -26,7 +26,7 @@ android {
 
     defaultConfig {
         minSdkVersion 14
-        targetSdkVersion 25
+        targetSdkVersion 26
     }
 
     sourceSets {
