--- a/build.gradle
+++ b/build.gradle
@@ -17,7 +17,7 @@ repositories {
 
 dependencies {
     implementation(
-        'com.android.support:appcompat-v7:28.0.0',
+            'androidx.appcompat:appcompat:1.0.0',
     )
 }
 
